--- a/AtrapadaEnNavidad.html
+++ b/AtrapadaEnNavidad.html
@@ -70,7 +70,7 @@
         <center><img src="images/logo s.png" alt=""></center>
         <center>
     
-            <p>
+            <p><center><h6>Las peliculas estan agregadas desde servidores externos a servitec.&nbsp; </h6></center>
                 
                 <img src="images/atrapada-en-la-navidad.png" width="10%" height="30%" alt=""><h1>atrapada En La Navidad</h1><br>
                 <h6> Título Original: Christmas ...Again?!
