--- a/ElChicoQueSalvoLaNavidad.html
+++ b/ElChicoQueSalvoLaNavidad.html
@@ -74,7 +74,8 @@
         <center>
     
             <p>
-                
+                <center><h6>Las peliculas estan agregadas desde servidores externos a servitec.&nbsp; </h6></center>
+
                 <img src="images/EL CHICO QUE SALVÓ LA NAVIDAD.jpg" width="10%" height="30%" alt=""><h1>El Chico Que Salvo La Navidad</h1><br>
                 <h6> 2021, 1h 46min - Familia, Aventuras, Niños, Drama
                     El joven y decidido Nikolas encuentra su destino en una tierra mágica habitada por elfos mientras sale en busca de su padre e intenta traer la esperanza a su hogar.</h6> 
