--- a/ReCambioDePrincesa.html
+++ b/ReCambioDePrincesa.html
@@ -71,6 +71,9 @@
         <center>
     
             <p>
+
+
+				<center><h6>Las peliculas estan agregadas desde servidores externos a servitec.&nbsp; </h6></center>
                 
                 <img src="images/Re_cambio_de_princesa-598509233-large.jpg" width="10%" height="30%" alt=""><h1>Recambio De Princesa (2020)</h1><br>
                 <h6> TGeneros: Comedy, Drama, Family, Romance
