--- a/index.html
+++ b/index.html
@@ -124,7 +124,8 @@
 	<div class="three-grids py-5" id="new">
 		<div class="container py-xl-5 py-lg-3">
 			<h3 class="title mb-lg-5 mb-4 pb-4 text-center font-weight-bold">Lista de Peliculas navideñas&nbsp;</h3>
-			<h5>Las peliculas estan agregadas desde servidores externos a servitec. </h5>
+			<center><h6>Las peliculas estan agregadas desde servidores externos a servitec.&nbsp; </h6></center>
+			<br><br>
 			<div class="row">
 				<div class="col-md-4">
 					<div class="three-grids-w3pvt">
