--- a/RiendaSuelta.html
+++ b/RiendaSuelta.html
@@ -72,6 +72,11 @@
     
             <p>
                 
+
+				<center><h6>Las peliculas estan agregadas desde servidores externos a servitec.&nbsp; </h6></center>
+
+
+
                 <img src="images/OperacionNavidad.jpg" width="10%" height="30%" alt=""><h1>Rienda Suelta</h1><br>
                 <h6> Año: 2018Duración: 65 mins.
                     Géneros: Familiar, Drama, Comedia
