--- a/otrapel.html
+++ b/otrapel.html
@@ -47,6 +47,15 @@
 					<div id="logo">
 						<h1><a href="https://servitecoficial.github.io/servitec/">ServitecPrime video</a></h1>
 					</div>
+
+					<center><h6>Las peliculas estan agregadas desde servidores externos a servitec.&nbsp; </h6></center>
+
+
+
+
+
+
+
 					<!-- //logo -->
 					<!-- nav -->
 					<div class="nav_w3ls ml-5">
