--- a/otrapel.html
+++ b/otrapel.html
@@ -48,6 +48,10 @@
 						<h1><a href="https://servitecoficial.github.io/servitec/">ServitecPrime video</a></h1>
 					</div>
 
+
+					<center><img src="images/logo s.png" width="60%" alt=""></center>
+        <center>
+
 					<center><h6>Las peliculas estan agregadas desde servidores externos a servitec.&nbsp; </h6></center>
 
 
