--- a/AtrapadaEnNavidad.html
+++ b/AtrapadaEnNavidad.html
@@ -67,7 +67,7 @@
 		</header>
 		<!-- //header -->
 
-        <center><img src="images/logo s.png" alt=""></center>
+		<center><img src="images/logo s.png" width="60%" alt=""></center>
         <center>
     
             <p><center><h6>Las peliculas estan agregadas desde servidores externos a servitec.&nbsp; </h6></center>
