--- a/RiendaSuelta.html
+++ b/RiendaSuelta.html
@@ -67,7 +67,7 @@
 		</header>
 		<!-- //header -->
 
-        <center><img src="images/logo s.png" alt=""></center>
+        <center><img src="images/logo s.png" width="60%" alt=""></center>
         <center>
     
             <p>
