--- a/cuidadoconloquedeseas.html
+++ b/cuidadoconloquedeseas.html
@@ -70,7 +70,7 @@
 		<!-- pelicula -->
 
 
-        <center><img src="images/logo s.png" alt=""></center>
+        <center><img src="images/logo s.png" width="60%" alt=""></center>
         <center>
     
             <p>
