--- a/index.html
+++ b/index.html
@@ -59,6 +59,8 @@
 								<li><a href="https://servitecoficial.github.io/servitec-juegoslibrosprogramas/">Juegos/Programas y Libros&nbsp;&nbsp;</a></li>
 								
 								<li><a href="index.html">Pelis navideñas&nbsp;&nbsp;</a></li>
+
+								<li><a href="series.html">Series&nbsp;&nbsp;</a></li>
 								
 							</ul>
 						</nav>
