--- a/series.html
+++ b/series.html
@@ -76,7 +76,7 @@
 					<li>
 						<div class="container-fluid">
 							<div class="w3ls_banner_txt">
-								<h3><span>Servitec&nbsp;</span> 9 Peliculas navideñas  <br> para que disfrutes esta navidad.</h3>
+								<h3><span>Servitec&nbsp;</span> Series  <br> para que disfrutes.</h3>
 								<p class="w3ls_pvt-title">En esta parte vas a poder ver las peliculas de navidad!</p>
 								<p class="w3ls_pvt-title mt-2">Tambien vendemos juegos.</p>
 								<a href="https://api.whatsapp.com/send/?phone=541160548658&amp;text=%2AServitec+%C3%A1rea+juegos%2Fprogramas%2Flibros%2A+%0AHola.+Busco+Juego.&amp;app_absent=0" class="btn button-style mt-sm-5 mt-4">Juego en especial</a>
