--- a/pamm&tommy/capitulo2.html
+++ b/pamm&tommy/capitulo2.html
@@ -101,7 +101,7 @@
 
 
 
-            <iframe class="metaframe rptss" src="https://waaw.to/f/jmwresjwLwhS" frameborder="0" scrolling="no" allow="autoplay; encrypted-media" allowfullscreen=""></iframe>
+            <iframe width="560" height="315" src="https://1.streamplusvip.xyz/f/c9XUG91RUORc" frameborder="0" allowfullscreen=""></iframe>
            
            <!--Siguite capitulo
         o anterior-->
