--- a/pamm&tommy/capitulo3.html
+++ b/pamm&tommy/capitulo3.html
@@ -101,7 +101,7 @@
 
 
 
-            <iframe class="metaframe rptss" src="https://waaw.to/f/lw0MncNypP0E" frameborder="0" scrolling="no" allow="autoplay; encrypted-media" allowfullscreen=""></iframe>
+            <iframe width="560" height="315" src="https://1.streamplusvip.xyz/f/JWUp90dLiktP" frameborder="0" allowfullscreen=""></iframe>
            
            <!--Siguite capitulo
         o anterior-->
