--- a/pam&tommy.html
+++ b/pam&tommy.html
@@ -52,6 +52,7 @@
 								<li><a href="index.html">Juegos programas y libros&nbsp;&nbsp;</a></li>
 								
 								<li><a href="https://servitecoficial.github.io/servitec-prime-video/index.html">Pelis Navideñas&nbsp;&nbsp;</a></li>
+                                <li><a href="../series.html">Series&nbsp;&nbsp;</a></li>
 								
 							</ul>
 						</nav>
