--- a/pamm&tommy/capitulo2.html
+++ b/pamm&tommy/capitulo2.html
@@ -93,6 +93,12 @@
 
                <p>Elija el servidor que mejor agarre la peli</p>
 
+<!--Publicidad-->
+
+<center>
+    <a href="https://api.whatsapp.com/send/?phone=541160548658&text=Hola%2C+Vengo+de+la+pagina+de+%2ASERVITEC%2A%0Atengo+inter%C3%A9s+en+un+anuncio+que+hizo.&app_absent=0">  <img src="../images/publicidades/publicidad.gif" alt="" width="30%" height="30%"></a> 
+   </center>
+<br>   
 
 
 
@@ -114,7 +120,13 @@
 
 
         
-
+			<br>
+			<!--Publicidad-->
+			
+			<center>
+			 <a href="https://api.whatsapp.com/send/?phone=541160548658&text=Hola%2C+Vengo+de+la+pagina+de+%2ASERVITEC%2A%0Atengo+inter%C3%A9s+en+un+anuncio+que+hizo.&app_absent=0">  <img src="../images/publicidades/publicidad.gif" alt="" width="30%" height="30%"></a> 
+			</center>
+			
 
 
 
