--- a/pamm&tommy/capitulo1.html
+++ b/pamm&tommy/capitulo1.html
@@ -106,7 +106,7 @@
 
 
 
-            <iframe width="560" height="315" src="https://1.streamplusvip.xyz/f/xfBkLWc4Rvyn" frameborder="0" allowfullscreen=""></iframe>
+            <iframe width="50%" height="50%" src="https://1.streamplusvip.xyz/f/xfBkLWc4Rvyn" frameborder="0" allowfullscreen=""></iframe>
            <!--Siguite capitulo
         o anterior-->
         <br>
