--- a/pamm&tommy/capitulo2.html
+++ b/pamm&tommy/capitulo2.html
@@ -107,7 +107,7 @@
 
 
 
-            <iframe width="560" height="315" src="https://1.streamplusvip.xyz/f/c9XUG91RUORc" frameborder="0" allowfullscreen=""></iframe>
+            <iframe width="50%" height="50%" src="https://1.streamplusvip.xyz/f/c9XUG91RUORc" frameborder="0" allowfullscreen=""></iframe>
            
            <!--Siguite capitulo
         o anterior-->
