--- a/pam&tommy.html
+++ b/pam&tommy.html
@@ -146,6 +146,24 @@
 						</div>
 						
 					</div>
+
+
+
+
+
+					<br>
+
+					<!--Publicidad-->
+					
+					<center>
+						<a href="https://api.whatsapp.com/send/?phone=541160548658&text=Hola%2C+Vengo+de+la+pagina+de+%2ASERVITEC%2A%0Atengo+inter%C3%A9s+en+un+anuncio+que+hizo.&app_absent=0">  <img src="../images/publicidades/publicidad.gif" alt="" width="30%" height="30%"></a> 
+					   </center>
+					<br>   
+
+
+
+
+
 					<center><h5 class="text-uppercase text-bl font-weight-bold mb-2"> Pamm & Tommy Capitulo 1</h5><h6>Perforación y Golpeo</h6> <br> </center>
 			<center>
                 <!--capitulo-->
