--- a/pam&tommy.html
+++ b/pam&tommy.html
@@ -127,8 +127,12 @@
 	
 	
 
-
-
+				<!--Publicidad-->
+				<br>
+				<center>
+					<a href="https://api.whatsapp.com/send/?phone=541160548658&text=Hola%2C+Vengo+de+la+pagina+de+%2ASERVITEC%2A%0Atengo+inter%C3%A9s+en+un+anuncio+que+hizo.&app_absent=0">  <img src="images/publicidades/publicidad.gif" alt="" width="50%" height="50%"></a> 
+				   </center>
+				   <br>
 
 	<!--Packs de Programas primera linea-->
 
@@ -151,15 +155,7 @@
 
 
 
-					<br>
-
-					<!--Publicidad-->
-					
-					<center>
-						<a href="https://api.whatsapp.com/send/?phone=541160548658&text=Hola%2C+Vengo+de+la+pagina+de+%2ASERVITEC%2A%0Atengo+inter%C3%A9s+en+un+anuncio+que+hizo.&app_absent=0">  <img src="../images/publicidades/publicidad.gif" alt="" width="30%" height="30%"></a> 
-					   </center>
-					<br>   
-
+				
 
 
 
