--- a/pamm&tommy/capitulo3.html
+++ b/pamm&tommy/capitulo3.html
@@ -61,7 +61,8 @@
 							<label for="drop" class="toggle">Menu</label>
 							<input type="checkbox" id="drop" />
 							<ul class="menu">
-								<li><a href="index.html">Pelis Navideñas&nbsp;&nbsp;</a></li>
+								<li><a href="../index.html">Pelis Navideñas&nbsp;&nbsp;</a></li>
+
 								
 								<li><a href="https://servitecoficial.github.io/servitec-juegoslibrosprogramas/">Juegos/Programas y Libros navideñas&nbsp;&nbsp;</a></li>
 
@@ -97,7 +98,7 @@
 <!--Publicidad-->
 
 <center>
-    <a href="https://api.whatsapp.com/send/?phone=541160548658&text=Hola%2C+Vengo+de+la+pagina+de+%2ASERVITEC%2A%0Atengo+inter%C3%A9s+en+un+anuncio+que+hizo.&app_absent=0">  <img src="../images/publicidades/publicidad.gif" alt="" width="30%" height="30%"></a> 
+    <a href="https://api.whatsapp.com/send/?phone=541160548658&text=Hola%2C+Vengo+de+la+pagina+de+%2ASERVITEC%2A%0Atengo+inter%C3%A9s+en+un+anuncio+que+hizo.&app_absent=0">  <img src="../images/publicidades/publicidad.gif" alt="" width="50%" height="50%"></a> 
    </center>
 <br>   
 
@@ -125,7 +126,7 @@
 			<!--Publicidad-->
 			
 			<center>
-			 <a href="https://api.whatsapp.com/send/?phone=541160548658&text=Hola%2C+Vengo+de+la+pagina+de+%2ASERVITEC%2A%0Atengo+inter%C3%A9s+en+un+anuncio+que+hizo.&app_absent=0">  <img src="../images/publicidades/publicidad.gif" alt="" width="30%" height="30%"></a> 
+			 <a href="https://api.whatsapp.com/send/?phone=541160548658&text=Hola%2C+Vengo+de+la+pagina+de+%2ASERVITEC%2A%0Atengo+inter%C3%A9s+en+un+anuncio+que+hizo.&app_absent=0">  <img src="../images/publicidades/publicidad.gif" alt="" width="50%" height="50%"></a> 
 			</center>
 			
 			
