--- a/index.html
+++ b/index.html
@@ -123,6 +123,7 @@
 	<!-- //main banner -->
 
 	<!-- grids -->
+	<!-- grids -->
 	<div class="three-grids py-5" id="new">
 		<div class="container py-xl-5 py-lg-3">
 			<h3 class="title mb-lg-5 mb-4 pb-4 text-center font-weight-bold">Lista de Peliculas navideñas&nbsp;</h3>
