--- a/pamm&tommy/capitulo2.html
+++ b/pamm&tommy/capitulo2.html
@@ -89,7 +89,8 @@
                 <!--Imagen de la serie-->
 
                 <img src="../images/Series/Pam&tommy/tomm1.jpg" width="10%" height="30%" alt=""><h1>Pam & Tommy</h1><br>
-                <h6> Perforacíon Y Golpeo</h6> 
+                <h6>Cap.  Te Amo Tommy
+				</h6> 
                </p>
 
 
