--- a/pamm&tommy/capitulo2.html
+++ b/pamm&tommy/capitulo2.html
@@ -89,8 +89,8 @@
                 <!--Imagen de la serie-->
 
                 <img src="../images/Series/Pam&tommy/tomm1.jpg" width="10%" height="30%" alt=""><h1>Pam & Tommy</h1><br>
-                <h6>Cap.  Te Amo Tommy
-				</h6> 
+                <h4>Cap.  Te Amo Tommy
+				</h4> 
                </p>
 
 
@@ -286,7 +286,7 @@
 	</div>
 	<!-- //copyright -->
 
-	<script src="java/form.js"></script>
+	<script src="../java/form.js"></script>
 
 </body>
 
