--- a/pamm&tommy/capitulo3.html
+++ b/pamm&tommy/capitulo3.html
@@ -88,7 +88,7 @@
                 <!--Imagen de la serie-->
 
                 <img src="../images/Series/Pam&tommy/tomm1.jpg" width="10%" height="30%" alt=""><h1>Pam & Tommy</h1><br>
-                <h6> Cap. 3 Jane Fonda.</h6> 
+                <h4> Cap. 3 Jane Fonda.</h4> 
                </p>
 
 
@@ -286,7 +286,7 @@
 	</div>
 	<!-- //copyright -->
 
-	<script src="java/form.js"></script>
+	<script src="../java/form.js"></script>
 
 </body>
 
