Subida de temporadas

--- a/series/Euphoria/temp2/cap5.html
+++ b/series/Euphoria/temp2/cap5.html
@@ -90,7 +90,7 @@
                 <!--Imagen de la serie-->
 
                 <img src="../../../images/Series/euphoria/euphoria.jpg" width="10%" height="30%" alt=""><h1>Euphoria</h1><br>
-                <h4>Cap. 6 </h4> </p>
+                <h4>Cap. 5 </h4> </p>
                 <p>
                <center> <h6>Euphoria es la adaptación americana de la serie homónima israelí.
                    <br> Esta historia que se enmarca dentro del género dramático sigue a un 
@@ -118,27 +118,27 @@
 <!--Publicidad-->
 
 <center>
-    <a href="https://api.whatsapp.com/send/?phone=541160548658&text=Hola%2C+Vengo+de+la+pagina+de+%2ASERVITEC%2A%0Atengo+inter%C3%A9s+en+un+anuncio+que+hizo.&app_absent=0">  <img src="../../../images/publicidades/publicidad.gif" alt="" width="50%" height="50%"></a> <iframe src="//pelisplus.icu/play?id=NDEwMDc=&amp;option=latin" scrolling="no" allowfullscreen="" width="50%" height="50%" frameborder="0"></iframe>
+    <a href="https://api.whatsapp.com/send/?phone=541160548658&text=Hola%2C+Vengo+de+la+pagina+de+%2ASERVITEC%2A%0Atengo+inter%C3%A9s+en+un+anuncio+que+hizo.&app_absent=0">  <img src="../../../images/publicidades/publicidad.gif" alt="" width="50%" height="50%"></a> 
    </center>
 <br>   
 
 
-            <!--Servidor--><!--Servidor-->
             <!--Servidor-->
             <!--Servidor-->
             <!--Servidor-->
+            <!--Servidor-->
 
 
 
 
-            <iframe src="//pelisplus.icu/play?id=NDEwMDc=&amp;option=latin" scrolling="no" allowfullscreen=""width="50%" height="50%" frameborder="0"></iframe>
+			<iframe src="https://hqq.to/e/MmFSRmp5Sm5MNzF3Sy9lbkJQYVdMUT09" height="50%" width="50%" webkitallowfullscreen="" mozallowfullscreen="" allowfullscreen="" frameborder="0" scrolling="no"></iframe>
            <!--Siguite capitulo
         o anterior-->
         <br>
         <!--Anterior-->
-        <center><a href="../../../series.html"><a href="../temp1/cap5.html"><button class="atrassiguiente" id="button_a">🡠 anterior</button></a></a>
+        <center><a href="../../../series.html"><a href="cap4.html"><button class="atrassiguiente" id="button_a">🡠 anterior</button></a></a>
             <!--Siguiente-->
-            <a href="cap7.html"><button class="atrassiguiente" id="button_a"> Siguiente 🡢</button></a></center>
+            <a href="https://www.instagram.com/servitec.ar.oficial/"><button class="atrassiguiente" id="button_a"> Siguiente 🡢</button></a></center>
         
 
 
