--- a/series/Euphoria/temp1/cap8.html
+++ b/series/Euphoria/temp1/cap8.html
@@ -123,7 +123,7 @@
 <br>   
 
 
-            <!--Servidor-->
+            <!--Servidor--><!--Servidor-->
             <!--Servidor-->
             <!--Servidor-->
             <!--Servidor-->
