--- a/series/Euphoria/temp1/temporada1.html
+++ b/series/Euphoria/temp1/temporada1.html
@@ -58,9 +58,9 @@
 
 								<li><a href="https://servitecoficial.github.io/servitec-juegoslibrosprogramas/">Juegos/Programas y Libros&nbsp;&nbsp;</a></li>
 								
-								<li><a href="index.html">Pelis navideñas&nbsp;&nbsp;</a></li>
+								<li><a href="../../../index.html">Pelis navideñas&nbsp;&nbsp;</a></li>
 
-								<li><a href="series.html">Series&nbsp;&nbsp;</a></li>
+								<li><a href="../../../series.html">Series&nbsp;&nbsp;</a></li>
 								
 							</ul>
 						</nav>
