--- a/series/Euphoria/temp1/cap6.html
+++ b/series/Euphoria/temp1/cap6.html
@@ -118,7 +118,7 @@
 <!--Publicidad-->
 
 <center>
-    <a href="https://api.whatsapp.com/send/?phone=541160548658&text=Hola%2C+Vengo+de+la+pagina+de+%2ASERVITEC%2A%0Atengo+inter%C3%A9s+en+un+anuncio+que+hizo.&app_absent=0">  <img src="../../../images/publicidades/publicidad.gif" alt="" width="50%" height="50%"></a> <iframe src="//pelisplus.icu/play?id=NDEwMDc=&amp;option=latin" scrolling="no" allowfullscreen="" width="50%" height="50%" frameborder="0"></iframe>
+    <a href="https://api.whatsapp.com/send/?phone=541160548658&text=Hola%2C+Vengo+de+la+pagina+de+%2ASERVITEC%2A%0Atengo+inter%C3%A9s+en+un+anuncio+que+hizo.&app_absent=0"> 
    </center>
 <br>   
 
