--- a/series/Euphoria/temp2/temporada2.html
+++ b/series/Euphoria/temp2/temporada2.html
@@ -234,8 +234,8 @@
 						 
 						</div>
 					</div>
-					<center><h5 class="text-uppercase text-bl font-weight-bold mb-2">Euphoria <h6>Cap. 5.</h6>Proximamente</h5></center>
-			<center><a href="../../Euphoria/temp1/cap4.html"><button class="btn button-style mt-sm-5 mt-4" id="button_a">ver</button></a> </center> 
+					<center><h5 class="text-uppercase text-bl font-weight-bold mb-2">Euphoria <h6>Cap. 5.</h6></h5></center>
+			<center><a href="../../Euphoria/temp2/cap5.html"><button class="btn button-style mt-sm-5 mt-4" id="button_a">ver</button></a> </center> 
 				</div>
 				<div class="col-md-4 mt-md-0 mt-4">
 					<div class="cap1eu">
