--- a/series/Euphoria/temp1/cap4.html
+++ b/series/Euphoria/temp1/cap4.html
@@ -131,7 +131,7 @@
 
 
 
-            <iframe src="//pelisplus.icu/play?id=NDEwMDU=&amp;option=latin" scrolling="no" allowfullscreen="" width="50%" height="50%" frameborder="0"></iframe>
+			<iframe src="https://hqq.tv/player/embed_player.php?vid=Z2F3ZU02MXdrU21vWkc2OGRmOHhwQT09&amp;autoplay=no" height="50%" width="50%" webkitallowfullscreen="" mozallowfullscreen="" allowfullscreen="" frameborder="0" scrolling="no"></iframe>
            <!--Siguite capitulo
         o anterior-->
         <br>
