--- a/series/Euphoria/temp1/cap9.html
+++ b/series/Euphoria/temp1/cap9.html
@@ -131,7 +131,7 @@
 
 
 
-            <iframe src="//pelisplus.icu/play?id=OTkzODc=" scrolling="no" allowfullscreen=""width="50%" height="50%" frameborder="0"></iframe>
+			<iframe src="https://hqq.to/e/bVQwMW96NVNBcitjOFBlYUxaME1DQT09" height="50%" width="50%" webkitallowfullscreen="" mozallowfullscreen="" allowfullscreen="" frameborder="0" scrolling="no"></iframe>
            <!--Siguite capitulo
         o anterior-->
         <br>
