arreglo de altura y ancho

--- a/pamm&tommy/capitulo2.html
+++ b/pamm&tommy/capitulo2.html
@@ -110,7 +110,7 @@
 
 
 
-            <iframe width="50%" height="50%" src="https://1.streamplusvip.xyz/f/c9XUG91RUORc" frameborder="0" allowfullscreen=""></iframe>
+            <iframe height="350" width="350" src="https://1.streamplusvip.xyz/f/c9XUG91RUORc" frameborder="0" allowfullscreen=""></iframe>
            
            <!--Siguite capitulo
         o anterior-->
