--- a/series/Euphoria/temp1/cap10.html
+++ b/series/Euphoria/temp1/cap10.html
@@ -131,7 +131,7 @@
 
 
 
-            <iframe src="//pelisplus.icu/play?id=OTkzODg=" scrolling="no" allowfullscreen=""width="50%" height="50%" frameborder="0"></iframe>
+            <iframe src="//pelisplus.icu/play?id=OTkzODg=" scrolling="no" allowfullscreen=""height="350" width="350" frameborder="0"></iframe>
            <!--Siguite capitulo
         o anterior-->
         <br>
