--- a/series/Euphoria/temp1/cap5.html
+++ b/series/Euphoria/temp1/cap5.html
@@ -131,7 +131,7 @@
 
 
 
-            <iframe src="https://hqq.tv/player/embed_player.php?vid=U1BsdGxIdWtNRlRvaHhnM2VBeVVpdz09&amp;autoplay=no" height="50%" width="50%" webkitallowfullscreen="" mozallowfullscreen="" allowfullscreen="" frameborder="0" scrolling="no"></iframe>
+            <iframe src="https://hqq.tv/player/embed_player.php?vid=U1BsdGxIdWtNRlRvaHhnM2VBeVVpdz09&amp;autoplay=no" height="350" width="350" webkitallowfullscreen="" mozallowfullscreen="" allowfullscreen="" frameborder="0" scrolling="no"></iframe>
            <!--Siguite capitulo
         o anterior-->
         <br>
