--- a/pamm&tommy/capitulo3.html
+++ b/pamm&tommy/capitulo3.html
@@ -107,7 +107,7 @@
 
 
 
-            <iframe width="50%" height="50%" src="https://1.streamplusvip.xyz/f/JWUp90dLiktP" frameborder="0" allowfullscreen=""></iframe>
+            <iframe height="350" width="350" src="https://1.streamplusvip.xyz/f/JWUp90dLiktP" frameborder="0" allowfullscreen=""></iframe>
            
            <!--Siguite capitulo
         o anterior-->
