--- a/series/Euphoria/temp1/cap1.html
+++ b/series/Euphoria/temp1/cap1.html
@@ -132,7 +132,7 @@
 
 
 
-			<iframe src="https://hqq.tv/e/R0hDNmJzaWIvRGhZOXY2Y1VtUms2dz09" height="50%" width="50%" webkitallowfullscreen="" mozallowfullscreen="" allowfullscreen="" frameborder="0" scrolling="no"></iframe>
+			<iframe src="https://hqq.tv/e/R0hDNmJzaWIvRGhZOXY2Y1VtUms2dz09" height="350" width="350" webkitallowfullscreen="" mozallowfullscreen="" allowfullscreen="" frameborder="0" scrolling="no"></iframe>
            <!--Siguite capitulo
         o anterior-->
         <br>
