--- a/series/Euphoria/temp2/cap2.html
+++ b/series/Euphoria/temp2/cap2.html
@@ -131,7 +131,7 @@
 
 
 
-            <iframe src="https://hqq.to/e/SEllckNzdWx2aWp3WGdhdXBLWkxjdz09" height="50%" width="50%" webkitallowfullscreen="" mozallowfullscreen="" allowfullscreen="" frameborder="0" scrolling="no"></iframe>
+            <iframe src="https://hqq.to/e/SEllckNzdWx2aWp3WGdhdXBLWkxjdz09" height="350" width="350" webkitallowfullscreen="" mozallowfullscreen="" allowfullscreen="" frameborder="0" scrolling="no"></iframe>
            <!--Siguite capitulo
         o anterior-->
         <br>
