--- a/pam&tommy.html
+++ b/pam&tommy.html
@@ -239,7 +239,7 @@
 			<center><a href="pamm&tommy/capitulo5.html"><button class="btn button-style mt-sm-5 mt-4" id="button_a">Ver</button></a> </center> 
 				</div>
 				<div class="col-md-4 mt-md-0 mt-4">
-					<div class="Avast">
+					<div class="tom3">
 						<div class="text-effect-wthree p-4">
 							
 							
