--- a/series.html
+++ b/series.html
@@ -52,6 +52,8 @@
 								
 
 								<li><a href="https://servitecoficial.github.io/servitec-juegoslibrosprogramas/">Juegos/Programas y Libros&nbsp;&nbsp;</a></li>
+
+								<li><a href="quemadordegrasa.html">Quemador de grasas&nbsp;&nbsp;</a></li>
 								
 								<li><a href="index.html">Pelis navideñas&nbsp;&nbsp;</a></li>
 
