--- a/quemadordegrasa.html
+++ b/quemadordegrasa.html
@@ -112,7 +112,11 @@
 
 
 	<!--// map -->
-    <center><a href="https://api.whatsapp.com/send/?phone=5491160548658&text=%2ALIPO+ON+FIRE%2A%0A%0AHola+tengo+inter%C3%A9s+sobre+el+quemador+de+grasas.&app_absent=0"><button class="btn button-style mt-sm-5 mt-4" id="button_a">Comprar 💥$3750💥</button></a> </center> 
+    <center><a href="
+        
+https://mpago.la/2zKbUfs
+
+        "><button class="btn button-style mt-sm-5 mt-4" id="button_a">Comprar 💥$3750💥</button></a> </center> 
     <br><br><br>
 
     <center>
