arreglo de infra

--- a/quemadordegrasa.html
+++ b/quemadordegrasa.html
@@ -75,7 +75,7 @@
                <a href="https://api.whatsapp.com/send/?phone=5491160548658&text=%2ALIPO+ON+FIRE%2A%0A%0AHola+tengo+inter%C3%A9s+sobre+el+quemador+de+grasas.&app_absent=0"> <img src="images/d.png" width="30%"  alt=""></a><h1>💥LIPO ON FIRE💥</h1><br>
 
 
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/iQCGldhkg1Q" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe width="50%" height="50%" src="https://www.youtube.com/embed/iQCGldhkg1Q" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
                 <br><br>
                <center> <h6> INGREDIENTES:
@@ -112,11 +112,7 @@
 
 
 	<!--// map -->
-    <center><a href="
-        
-https://mpago.la/2zKbUfs
-
-        "><button class="btn button-style mt-sm-5 mt-4" id="button_a">Comprar 💥$3750💥</button></a> </center> 
+    <center><a href="https://mpago.la/2zKbUfs"><button class="btn button-style mt-sm-5 mt-4" id="button_a">Comprar 💥$3750💥</button></a> </center> 
     <br><br><br>
 
     <center>
