--- a/PAgo-Exitoso.html
+++ b/PAgo-Exitoso.html
@@ -95,7 +95,7 @@
 
 
 	<!--// map -->
-    <center><a href="https://api.whatsapp.com/send/?phone=5491160548658&text=%2ACompra+exitosa+de+Lipo+On+fire%2A+%0APasos+a+seguir.+%0A1.+saque+captura+o+descargue+el+comprobante+de+pago+y+env%C3%ADenos+por+ac%C3%A1.+%0A2.+coordinar+m%C3%A9todo+de+entrega.%0A%0A+Si+es+es+punto+de+encuentro+%28Nos+manejamos+en+estaciones+del+tren+sarmiento%29%0A+o+envi%C3%B3+por+correo+%28este+ultimo+tiene+cargo+extra+dependiendo+el+lugar+de+envi%C3%B3%29+%0A3.+Espera+tu+lipo+on+fire%21%0A+Gracias+por+tu+compra.&app_absent=0"><button class="btn button-style mt-sm-5 mt-4" id="button_a">Mandar comprovante de comprobante</button></a> </center> 
+    <center><a href="https://api.whatsapp.com/send/?phone=5491160548658&text=%2ACompra+exitosa+de+Lipo+On+fire%2A+%0APasos+a+seguir.+%0A1.+saque+captura+o+descargue+el+comprobante+de+pago+y+env%C3%ADenos+por+ac%C3%A1.+%0A2.+coordinar+m%C3%A9todo+de+entrega.%0A%0A+Si+es+es+punto+de+encuentro+%28Nos+manejamos+en+estaciones+del+tren+sarmiento%29%0A+o+envi%C3%B3+por+correo+%28este+ultimo+tiene+cargo+extra+dependiendo+el+lugar+de+envi%C3%B3%29+%0A3.+Espera+tu+lipo+on+fire%21%0A+Gracias+por+tu+compra.&app_absent=0"><button class="btn button-style mt-sm-5 mt-4" id="button_a">Mandar comprobante de la compra.</button></a> </center> 
     <br><br><br>
 
     <center>
