--- a/series.html
+++ b/series.html
@@ -58,6 +58,7 @@
 								<li><a href="index.html">Pelis navideñas&nbsp;&nbsp;</a></li>
 
 								<li><a href="series.html">Series&nbsp;&nbsp;</a></li>
+								<li><a href="Servitecfutboll.html">Fut&nbsp;&nbsp;</a></li>
 								
 							</ul>
 						</nav>
